Upgrade to Java 16

--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,12 @@ plugins {
 
 group = 'tech.allegro.blog'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
-targetCompatibility = '11'
+
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(16)
+  }
+}
 
 repositories {
 	mavenCentral()
