Small refactor. Added missing unit tests. Changed exceptions to event (in domain) Changed the way of initializing wiremock.

--- a/src/main/resources/application-integration.yml
+++ b/src/main/resources/application-integration.yml
@@ -6,3 +6,7 @@ delivery-cost-service:
 
 special-price-catalogue-service:
   url: http://127.0.0.1:${wiremock.server.port}
+
+spring:
+  main:
+    allow-bean-definition-overriding: true
