--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-[*]
+[*.java]
 charset = utf-8
 end_of_line = lf
 indent_size = 2
@@ -16,6 +16,8 @@ ij_visual_guides = none
 ij_wrap_on_typing = false
 
 [*.groovy]
+indent_size = 4
+tab_width = 4
 ij_groovy_label_indent_size = 4
 ij_groovy_names_count_to_use_import_on_demand = 999
 ij_groovy_class_count_to_use_import_on_demand = 999
