--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-[*.java]
+[{*.java, *.groovy}]
 charset = utf-8
 end_of_line = lf
 indent_size = 2
@@ -6,7 +6,7 @@ indent_style = space
 insert_final_newline = true
 max_line_length = 120
 tab_width = 2
-trim_trailing_whitespace=true
+trim_trailing_whitespace = true
 ij_continuation_indent_size = 2
 ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
