--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,12 @@
+client-reputation-service:
+  url: http://127.0.0.1:8081
+
+delivery-cost-service:
+  url: http://127.0.0.1:8081
+
+special-price-catalogue-service:
+  url: http://127.0.0.1:8081
+
 spring:
   jackson:
     visibility:
