--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
   testImplementation group: 'org.spockframework', name: 'spock-core', version: versions.spock
   testImplementation group: 'org.codehaus.groovy', name: 'groovy-json', version: versions.groovy
 
+  integrationTest group: 'com.jayway.jsonpath', name: 'json-path', version: '2.6.0'
   integrationTest group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
   integrationTest group: 'org.spockframework', name: 'spock-spring', version: versions.spock
   integrationTest group: 'org.springframework.boot', name: 'spring-boot-starter-test'
