--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,8 @@ task integrationTest(type: Test) {
   }
 }
 
+check.dependsOn integrationTest
+
 compileJava {
   options.encoding = 'UTF-8'
   options.compilerArgs += ['--enable-preview']
